[package]
name = "sentinel-wallet"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.34"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"
chrono = "0.4"

[build-dependencies]
prost-build = "0.12"